--- a/package.json
+++ b/package.json
@@ -1,26 +1,39 @@
 {
-  "name": "controle_de_usuarios_node.js",
+  "name": "projeto-em-node-exemplo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
-  "author": "matheusb.dev",
+  "author": "",
   "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
+    "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
-    "pg-hstore": "^2.3.4",
     "redis": "^5.8.2",
     "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.3",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "yamljs": "^0.3.0"
+    "uuid": "^11.1.0"
+  },
+  "_moduleAliases": {
+    "src": "src"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "sequelize-cli": "^6.6.3"
   }
 }
